--- a/main.css
+++ b/main.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: "Source Sans Pro";
+  src: url("./assets/Source-Sans.woff2") format("woff2");
+  font-display: swap;
+}
+
 *,
 *:before,
 *:after {
@@ -11,7 +17,6 @@
 
 body {
   font-family: "Source Sans Pro", "Arial", sans-serif;
-  font-display: swap;
   width: 100vw;
   height: 100vh;
 }
@@ -64,7 +69,7 @@ header ul a::after {
   position: absolute;
   z-index: 1;
   opacity: 0;
-  font-weight: 900;
+  font-weight: 600;
   color: #348cb3;
   background: white;
   border-radius: 4px;
@@ -226,7 +231,7 @@ header {
   width: 90%;
 }
 
-.avatar {
+.avatar img {
   border-radius: 50%;
   width: 100px;
   border-style: solid;
@@ -256,15 +261,14 @@ header * {
 }
 
 header h1 {
-  font-size: 4.35em;
-  font-weight: 900;
+  font-size: 4rem;
+  font-weight: 600;
   letter-spacing: -0.035em;
-  line-height: 1em;
+  margin-top: -0.5rem;
 }
 
 header p {
   font-size: 1.25rem;
-  margin: 1rem 0;
   opacity: 0.75;
 }
 
@@ -492,16 +496,25 @@ header nav a svg {
   }
 
   #bg {
-    background-size: 300px auto;
-    width: 900px;
+    background-size: 600px auto;
+    width: 2000px;
   }
 
   header h1 {
-    font-size: 2.5em;
+    font-size: 3.5em;
   }
 
   header p {
     font-size: 1rem;
+  }
+
+  header nav a {
+    padding: 1rem;
+  }
+
+  header nav a svg {
+    width: 1.75rem;
+    height: 1.75rem;
   }
 
   header nav a:hover {
@@ -519,6 +532,10 @@ header nav a svg {
     width: 28px;
     height: 28px;
     margin: 0 4px;
+  }
+
+  header h1 {
+    font-size: 2.75rem;
   }
 
   header nav a {
