--- a/style.css
+++ b/style.css
@@ -43,6 +43,10 @@ svg {
   width: 2rem;
 }
 
+::selection {
+  background: wheat;
+}
+
 /* Utility Classes */
 
 .flex {
@@ -83,7 +87,6 @@ svg {
 
 body {
   width: 80vw;
-  max-width: 1200px;
   margin: 0 auto;
   padding-top: 0.5rem;
   overflow-x: hidden;
@@ -117,11 +120,11 @@ nav ul {
 
 #jumbotron img {
   position: absolute;
-  right: -6rem;
+  right: -5vw;
   bottom: 0;
   opacity: 0;
   animation: fadein 1s ease-in-out forwards;
-  height: 100%;
+  height: 90vh;
 }
 
 #jumbotron p {
@@ -131,6 +134,13 @@ nav ul {
 .robot {
   display: inline-block;
   animation: shake 2s ease-in-out infinite;
+}
+
+.highlight {
+  background: rgba(0, 0, 0, 0.8);
+  color: whitesmoke;
+  padding: 0 0.5rem;
+  border-radius: 4px;
 }
 
 #jumbotron a {
@@ -269,7 +279,7 @@ footer ul li:hover::after {
     font-size: 1.75rem;
   }
   h2 {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
   }
   p {
     font-size: 1rem;
